enum EventTypeEnum {
  concierto("Concierto"),
  salidaProcesional("Salida Procesional");

  const EventTypeEnum(this.displayName);
  final String displayName;
}
