...
                'lib/config/assets/images/SignInGoogle.png',
                width: size.width * 0.1,
              ),
            ),
          ),
          label: const Text(
            'Inicia sesión con Google',
            style: TextStyle(
              color: Colors.white
            ),
          ),
          onPressed: () async {
            setState(() {
...
