...
            ),
          ),

          const SizedBox(height: 5),
          CustomExpansionPanel(
            isExpanded: true,
            headerText: "Día y Hora",
            expandedText: holyWeekEventSelected?.date != null
              ? DateToString().dateString(holyWeekEventSelected!.date)
              : "Descanso"
          ),

          CustomExpansionPanel(
            headerText: "Duración", 
            expandedText: DurationToString.durationToString(holyWeekEventSelected?.duration ?? Duration.zero)
          ),

          CustomExpansionPanel(
            headerText: "Notas", 
            expandedText: holyWeekEventSelected?.moreInformation ?? "",
...
