...
    March march = ref.read(selectedMarchProvider.notifier).state;

    return ListView(
      children: [
        _CustomTitleSection(march: march, number: march.number),
        const SizedBox(height: 10),
        CustomExpansionPanel(headerText: 'Autor', expandedText: march.author),
        CustomExpansionPanel(headerText: 'Más Información', expandedText: march.moreInformation ?? ""),
        const SizedBox(height: 10),
        MarchVideo(youtubeLink: march.link ?? "", name: march.name)
      ],
    );
  }
}
...
